--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "homebridge-bgh-smart",
+  "name": "homebridge-solidmation-bgh-smart",
   "keywords": [
     "homebridge-plugin"
   ],
   "version": "0.1.0",
-  "description": "BGH Smart Control plugin for homebridge",
+  "description": "Solidmation - BGH Smart Control plugin for homebridge",
   "main": "index.js",
   "author": "Sergio Behrends <sergio@behrends.com.ar>",
   "contributors": [{
     "name": "Roberto González",
     "email": "robert@aerolab.co"
+  },{
+    "name": "Ariel Sanchez",
+    "email": "sanchez.ariel@gmail.com"
   }],
   "license": "MIT",
   "dependencies": {
