--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Solidmation - BGH Smart Control plugin for homebridge",
   "main": "index.js",
   "author": "Sergio Behrends <sergio@behrends.com.ar>",
-  "contributors": [{
-    "name": "Roberto González",
-    "email": "robert@aerolab.co"
-  },{
-    "name": "Ariel Sanchez",
-    "email": "sanchez.ariel@gmail.com"
-  }],
+  "contributors": [
+    {
+      "name": "Roberto González",
+      "email": "robert@aerolab.co"
+    },
+    {
+      "name": "Ariel Sanchez",
+      "email": "sanchez.ariel@gmail.com"
+    }
+  ],
   "license": "MIT",
   "dependencies": {
     "request": "^2.79.0"
